<resources>
    <string name="app_name">Skyapp - Powered by StudioMist</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="profile_title">Profile</string>
    <string name="profile_avatar">Profile avatar</string>
    <string name="profile_first_name">First name</string>
    <string name="profile_last_name">Last name</string>
    <string name="profile_created">Created</string>
    
    <!-- Login Screen -->
    <string name="login_welcome_title">Welcome back</string>
    <string name="login_welcome_subtitle">Sign in to your account</string>
    <string name="login_email_hint">Email address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Sign In</string>
    <string name="login_or_divider">or continue with</string>
    <string name="login_google">Google</string>
    <string name="login_microsoft">Microsoft</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_no_account">Don\'t have an account? <b>Sign up</b></string>
    
    <!-- Loading Screen -->
    <string name="loading_default_message">Loading...</string>
    <string name="loading_login_message">Preparing your workspace</string>
    <string name="loading_profile_message">Loading profile data</string>
    <string name="loading_shipments_message">Loading shipments</string>
    <string name="loading_routes_message">Loading routes</string>
    <string name="loading_checkpoints_message">Loading checkpoints</string>
    <string name="loading_secondary_message">Please wait while we prepare everything for you</string>
    
    <!-- Content Descriptions -->
    <string name="content_desc_sepex_logo">SEPEX company logo</string>
    <string name="content_desc_google_icon">Google logo</string>
    <string name="content_desc_microsoft_icon">Microsoft logo</string>
    <string name="content_desc_password_visibility">Toggle password visibility</string>
</resources>